<feat> fix kanban overflow

--- a/src/index.css
+++ b/src/index.css
@@ -208,10 +208,10 @@ input[type="file"]::file-selector-button:hover {
   text-align: right !important;
 }
 
-/*::-webkit-scrollbar {*/
-/*  width: 12px;*/
-/*  display: none;*/
-/*}*/
+::-webkit-scrollbar {
+  width: 12px;
+  display: none;
+}
 
 .css-1j2zi5l {
   top: 150px !important;
